:bug: Fix issue with event spacing

--- a/wp-content/themes/commence/style.css
+++ b/wp-content/themes/commence/style.css
@@ -413,7 +413,7 @@ section{
 }
 
 #upcoming-events-carousel .single-day{
-  padding: 0 15px;
+  margin-right: 15px;
 }
 
 .tribe-events-series-relationship-single-marker{
